Resized Images and added a few

--- a/index.html
+++ b/index.html
@@ -266,7 +266,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/Munro-Logo.jpg" alt="mobile app icon" width="40">
+                <img src="./assets/images/Munro-Logo.png" alt="mobile app icon" width="40">
               </div>
 
               <div class="service-content-box">
@@ -470,25 +470,43 @@
 
             <li class="programminglanguages-item">
               <a href="#">
-                <img src="./assets/images/html_128x128.png" alt="html logo">
+                <img src="./assets/images/html_filetype_72px.png" alt="html logo">
               </a>
             </li>
 
             <li class="programminglanguages-item">
               <a href="#">
-                <img src="./assets/images/css_128x128.png" alt="css logo">
+                <img src="./assets/images/css_72px.png" alt="css logo">
               </a>
             </li>
 
             <li class="programminglanguages-item">
               <a href="#">
-                <img src="./assets/images/javascript_128x128.png" alt="javascript logo">
+                <img src="./assets/images/javascript_72px.png" alt="javascript logo">
               </a>
             </li>
 
             <li class="programminglanguages-item">
               <a href="#">
-                <img src="./assets/images/python_128x128.png" alt="python logo">
+                <img src="./assets/images/python_72px.png" alt="python logo">
+              </a>
+            </li>
+
+            <li class="programminglanguages-item">
+              <a href="#">
+                <img src="./assets/images/sql_72px.png" alt="python logo">
+              </a>
+            </li>
+
+            <li class="programminglanguages-item">
+              <a href="#">
+                <img src="./assets/images/git_72px.png" alt="python logo">
+              </a>
+            </li>
+
+            <li class="programminglanguages-item">
+              <a href="#">
+                <img src="./assets/images/r_icon_72px.png" alt="python logo">
               </a>
             </li>
 
@@ -509,27 +527,46 @@
   
               <li class="tools-item">
                 <a href="#">
-                  <img src="./assets/images/excel_96px.png" alt="excel logo">
+                  <img src="./assets/images/excel_icon_72px.png" alt="excel logo">
                 </a>
               </li>
   
               <li class="tools-item">
                 <a href="#">
-                  <img src="./assets/images/word_96px.png" alt="css logo">
+                  <img src="./assets/images/word_icon_72px.png" alt="css logo">
                 </a>
               </li>
   
               <li class="tools-item">
                 <a href="#">
-                  <img src="./assets/images/powerpoint_96px.png" alt="client logo">
+                  <img src="./assets/images/powerpoint_icon_72px.png" alt="client logo">
                 </a>
               </li>
   
               <li class="tools-item">
                 <a href="#">
-                  <img src="./assets/images/github_96px.png" alt="client logo">
+                  <img src="./assets/images/github_72px.png" alt="client logo">
                 </a>
               </li>
+
+              <li class="tools-item">
+                <a href="#">
+                  <img src="./assets/images/mysql_72px.png" alt="client logo">
+                </a>
+              </li>
+
+              <li class="tools-item">
+                <a href="#">
+                  <img src="./assets/images/microsoft_visual_studio_code_72px.png" alt="client logo">
+                </a>
+              </li>
+
+              <li class="tools-item">
+                <a href="#">
+                  <img src="./assets/images/stata_72px.png" alt="client logo" width="75%">
+                </a>
+              </li>
+              
   
   
             </ul>
@@ -538,7 +575,7 @@
 
 
              <!--
-             - Tools Section 
+             - Design & Creativity Section 
              -->
 
            <section class="design">
@@ -549,31 +586,37 @@
   
               <li class="design-item">
                 <a href="#">
-                  <img src="./assets/images/photoshop_96px.png" alt="excel logo">
+                  <img src="./assets/images/photoshop_icon_72px.png" alt="excel logo">
                 </a>
               </li>
   
               <li class="design-item">
                 <a href="#">
-                  <img src="./assets/images/adobe-illustrator_96px.png" alt="css logo">
+                  <img src="./assets/images/adobeai_icon_72px.png" alt="css logo">
                 </a>
               </li>
   
               <li class="design-item">
                 <a href="#">
-                  <img src="./assets/images/adobe-premiere-pro_96px.png" alt="client logo">
+                  <img src="./assets/images/adobe_premiere_pro_72px.png" alt="client logo">
                 </a>
               </li>
   
               <li class="design-item">
                 <a href="#">
-                  <img src="./assets/images/final_cut_pro_96px.png" alt="client logo">
+                  <img src="./assets/images/final_cut_pro_72px.png" alt="client logo">
                 </a>
               </li>
-              
+
               <li class="design-item">
                 <a href="#">
-                  <img src="./assets/images/FL_Studio_96px.png" alt="client logo">
+                  <img src="./assets/images/fl_studio_72px.png" alt="client logo">
+                </a>
+              </li>
+
+              <li class="design-item">
+                <a href="#">
+                  <img src="./assets/images/canva_logo_icon_72px.png" alt="client logo">
                 </a>
               </li>
   
