Minor Formating and Improvements on responsiveness

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <!--
     - favicon
   -->
-  <link rel="shortcut icon" href="./assets/images/logo.ico" type="image/x-icon">
+  <link rel="shortcut icon" href="./assets/images/favicon_big.png" type="image/x-icon">
 
   <!--
     - custom css link
@@ -42,11 +42,11 @@
       <div class="sidebar-info">
 
         <figure class="avatar-box">
-          <img src="./assets/images/my-avatar.png" alt="Richard hanrick" width="80">
+          <img src="./assets/images/my-avatar.png" alt="Tariq Williams" width="80">
         </figure>
 
         <div class="info-content">
-          <h1 class="name" title="Richard hanrick">Tariq Williams</h1>
+          <h1 class="name" title="Tariq Williams">Tariq Williams</h1>
 
           <p class="title">God's Child</p>
         </div>
@@ -252,7 +252,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/Eagle Medical Lab Round.png" alt="Daniel lewis" width="60"
+                  <img src="./assets/images/Eagle Medical Lab Round 2.png" alt="Eagle Medical Logo" width="60"
                     data-testimonials-avatar>
                 </figure>
 
@@ -284,7 +284,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/K-logo.png" alt="K-logo" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/K-logo_big .png" alt="K-logo" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-kcollege" data-testimonials-title>Kalamazoo College</h4>
@@ -315,7 +315,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/K-logo.png" alt="K-logo" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/K-logo_big .png" alt="K-logo" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-kcollege" data-testimonials-title>Kalamazoo College</h4>
@@ -341,7 +341,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/K-logo.png" alt="K-logo" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/K-logo_big .png" alt="K-logo" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-kcollege" data-testimonials-title>Kalamazoo College</h4>
@@ -371,7 +371,7 @@
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
-                  <img src="./assets/images/K-logo.png" alt="K-logo" width="60" data-testimonials-avatar>
+                  <img src="./assets/images/K-logo_big .png" alt="K-logo" width="60" data-testimonials-avatar>
                 </figure>
 
                 <h4 class="h4 testimonials-item-kcollege" data-testimonials-title>Kalamazoo College</h4>
@@ -450,7 +450,7 @@
 
             <div class="modal-img-wrapper">
               <figure class="modal-avatar-box">
-                <img src="./assets/images/avatar-1.png" alt="Daniel lewis" width="80" data-modal-img>
+                <img src="./assets/images/avatar-1.png" alt="Logo" width="80" data-modal-img>
               </figure>
 
               <img src="./assets/images/icon-quote.svg" alt="quote icon">
@@ -488,7 +488,7 @@
             <li class="service-item">
 
               <div class="service-icon-box">
-                <img src="./assets/images/K-logo.jpg " alt="design icon" width="70">
+                <img src="./assets/images/K-logo_big .png " alt="design icon" width="70">
               </div>
 
               <div class="service-content-box">
@@ -839,31 +839,31 @@
 
             <li class="tools-item">
               <a>
-                <img src="./assets/images/powerpoint_icon_72px.png" alt="client logo">
+                <img src="./assets/images/powerpoint_icon_72px.png" alt="poweroint logo">
               </a>
             </li>
 
             <li class="tools-item">
               <a>
-                <img src="./assets/images/github_72px.png" alt="client logo">
+                <img src="./assets/images/github_72px.png" alt="powerpoint logo">
               </a>
             </li>
 
             <li class="tools-item">
               <a>
-                <img src="./assets/images/mysql_72px.png" alt="client logo">
+                <img src="./assets/images/mysql_72px_big.png" alt="powerpoint logo">
               </a>
             </li>
 
             <li class="tools-item">
               <a>
-                <img src="./assets/images/microsoft_visual_studio_code_72px.png" alt="client logo">
+                <img src="./assets/images/microsoft_visual_studio_code_72px.png" alt="Microsoft Vs logo">
               </a>
             </li>
 
             <!-- <li class="tools-item-stata">
                 <a href="#">
-                  <img src="./assets/images/stata_72px.png" alt="client logo" width="75%">
+                  <img src="./assets/images/stata_72px.png" alt="" width="75%">
                 </a>
               </li> -->
 
@@ -886,37 +886,37 @@
 
             <li class="design-item">
               <a>
-                <img src="./assets/images/photoshop_icon_72px.png" alt="excel logo">
+                <img src="./assets/images/photoshop_icon_72px.png" alt="photoshop logo">
               </a>
             </li>
 
             <li class="design-item">
               <a>
-                <img src="./assets/images/adobeai_icon_72px.png" alt="css logo">
+                <img src="./assets/images/adobeai_icon_72px.png" alt="adobeai logo">
               </a>
             </li>
 
             <li class="design-item">
               <a>
-                <img src="./assets/images/adobe_premiere_pro_72px.png" alt="client logo">
+                <img src="./assets/images/adobe_premiere_pro_72px.png" alt="premiere pro logo">
               </a>
             </li>
 
             <li class="design-item">
               <a>
-                <img src="./assets/images/final_cut_pro_72px.png" alt="client logo">
+                <img src="./assets/images/final_cut_pro_72px.png" alt="final cut pro logo">
               </a>
             </li>
 
             <li class="design-item">
               <a>
-                <img src="./assets/images/fl_studio_72px.png" alt="client logo">
+                <img src="./assets/images/fl_studio_72px.png" alt="fl studio logo">
               </a>
             </li>
 
             <li class="design-item">
               <a>
-                <img src="./assets/images/canva_logo_icon_72px.png" alt="client logo">
+                <img src="./assets/images/canva_logo_icon_72px.png" alt="canva logo">
               </a>
             </li>
 
@@ -1020,7 +1020,7 @@
                 for the opportunity to develop my skills and grow as a finance professional with your company .</p>
 
               <p class="faq-content2">
-                Additionally , Throughout my academic career, I have demonstrated a strong work ethic and dedication to
+                Additionally, throughout my academic career, I have demonstrated a strong work ethic and dedication to
                 my studies, which I believe will translate well to the working world.
                 I've also completed relevant coursework in mathematics, computer science, and economics, which has
                 provided me with a solid foundation in the principles
@@ -1028,29 +1028,6 @@
                 learn from experienced professionals in the field
                 Overall, I'm committed to doing whatever it takes to succeed and make valuable contributions to your
                 team.
-
-              </p>
-
-            </div>
-
-          </details>
-
-
-
-          <details>
-
-            <summary> What are your career goals? </summary>
-
-            <div class="faq-content">
-
-              <p>
-
-                My current goal is to secure a position at a reputable company that encourages professional development
-                and offers a steady stream of new challenges.
-                As I progress in my role, my ultimate ambition is to assume more management responsibilities and play an
-                active role in the direction of the company.
-                Above all, I am seeking an organization that values its employees and fosters a supportive environment
-                for long-term career growth.
 
               </p>
 
@@ -1085,11 +1062,36 @@
 
           <details>
 
+            <summary> What are your career goals? </summary>
+
+            <div class="faq-content">
+
+              <p>
+
+                My current goal is to secure a position at a reputable company that encourages professional development
+                and offers a steady stream of new challenges.
+                As I progress in my role, my ultimate ambition is to assume more management responsibilities and play an
+                active role in the direction of the company.
+                Above all, I am seeking an organization that values its employees and fosters a supportive environment
+                for long-term career growth.
+
+              </p>
+
+            </div>
+
+          </details>
+
+
+
+
+
+          <details>
+
             <summary> Why did you decide to major in Mathematics and Economics?</summary>
 
             <div class="faq-content">
 
-              <p> From my early years in high school, I've always been intrigued by the intricate theories and
+              <p> Since my early years in high school, I've always been intrigued by the intricate theories and
                 ideologies of mathematics.
                 The subject presented unique challenges that piqued my interest and encouraged me to delve deeper into
                 it. As I explored the subject,
@@ -1098,9 +1100,7 @@
                 This led me to economics, where I could combine my love for mathematics with a practical understanding
                 of how the world works. By studying economics,
                 I'm able to use quantitative analysis and modelling to provide solutions to complex problems, which is
-                incredibly rewarding. Overall, my interest in mathematics
-                and economics is driven by my curiosity about the world and my desire to use data-driven insights to
-                make informed decisions that have a positive impact on the world.
+                incredibly rewarding.
 
               </p>
 
@@ -1210,14 +1210,14 @@
 
 
             <li class="project-item  active" data-filter-item data-category="graphic design">
-              <a href="#">
+              <a href="https://www.canva.com/design/DAFBsG0PTfs/5sDU-JA229NnK8d2c-wqwg/view?utm_content=DAFBsG0PTfs&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu" target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/LOC'D.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/LOC'D.png" alt="LOC'D By Lois" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">LOC'D Logo</h3>
@@ -1229,14 +1229,14 @@
 
 
             <li class="project-item  active" data-filter-item data-category="graphic design">
-              <a href="#">
+              <a href="https://www.canva.com/design/DAFMjAbIDOk/cn-iTC9EJu7voAmbzeKmdw/view?utm_content=DAFMjAbIDOk&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Welcome Back Wellness.png" alt="arrival" loading="lazy">
+                  <img src="./assets/images/Welcome Back Wellness.png" alt="Poster" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Welcome back Welness Poster </h3>
@@ -1250,7 +1250,7 @@
 
 
             <li class="project-item  active" data-filter-item data-category="graphic design">
-              <a href="#">
+              <a href="https://www.canva.com/design/DAFUPnB6eqE/FPqNF00gW87q1zl3kdBFAA/watch?utm_content=DAFUPnB6eqE&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"  target="_blank" rel="noopener noreferrer" >
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -1286,7 +1286,7 @@
             </li>
 
             <li class="project-item  active" data-filter-item data-category="graphic design">
-              <a href="#">
+              <a href="https://www.canva.com/design/DAFIA25rgns/qSEBVCh2X67loUy7QG8Gpw/view?utm_content=DAFIA25rgns&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu " target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -1305,7 +1305,7 @@
 
 
             <li class="project-item  active" data-filter-item data-category="graphic design">
-              <a href="#">
+              <a href="https://www.canva.com/design/DAFZHHPZ3KA/AeDwe87EinncszxImdipKg/view?utm_content=DAFZHHPZ3KA&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu" target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -1383,7 +1383,7 @@
 
 
             <li class="project-item  active" data-filter-item data-category="graphic design">
-              <a href="#">
+              <a href="https://www.canva.com/design/DAFLNdADGU0/m68HDiLMciPYiwsAnawgEg/view?utm_content=DAFLNdADGU0&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink" target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
@@ -1430,7 +1430,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/Ciee Certificate.jpg" alt="Design conferences in 2022" loading="lazy">
+                  <img src="./assets/images/Ciee Certificate.jpg" alt="Ciee Certificate" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1446,7 +1446,7 @@
                   <h4 class="h4 blog-item-title">Intercultural Education Certificate</h4>
 
                   <p class="blog-text">
-                    Granted in recognition of.........
+                    
                   </p>
 
                 </div>
@@ -1458,7 +1458,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/Dean's List.png" alt="The forgotten art of spacing" loading="lazy">
+                  <img src="./assets/images/Dean's List.png" alt="Deans's List" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1474,7 +1474,7 @@
                   <h3 class="h3 blog-item-title"> Dean's List </h3>
 
                   <p class="blog-text">
-                    On Deans list every academic year.....
+
                   </p>
 
                 </div>
@@ -1487,7 +1487,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/Rachel Forage.png" alt="Best fonts every designer" loading="lazy">
+                  <img src="./assets/images/Rachel Forage.png" alt="" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1517,7 +1517,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/Korean Cert.png" alt="UI interactions of the week" loading="lazy">
+                  <img src="./assets/images/Korean Cert.png" alt="" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1547,7 +1547,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/Spanish Cert.jpg" alt="Design digest #80" loading="lazy">
+                  <img src="./assets/images/Spanish Cert.jpg" alt="" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1575,7 +1575,7 @@
               <a href="#">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/blog-6.jpg" alt="Design digest #79" loading="lazy">
+                  <img src="./assets/images/blog-6.jpg" alt="" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
