--- a/index.html
+++ b/index.html
@@ -269,7 +269,7 @@
 
                     <li>Provided weekly reports on trends in data using R studio for data visualization </li>
 
-                    <li> Contributed to the management and organization of sample inventory by redisigning the companies
+                    <li> Contributed to the management and organization of sample inventory by redesigning the companies
                       database using SQL </li>
 
                   </ul>
@@ -711,7 +711,7 @@
 
                 <li class="timeline-item">
 
-                  <h4 class="h4 timeline-item-title">Econ 305 - Intermediate Macroeconomics</h4>
+                  <h4 class="h4 timeline-item-title">Econ 306 - Intermediate Macroeconomics</h4>
 
                 </li>
 
@@ -812,6 +812,18 @@
 
 
           </ul>
+
+          <!----------------------- 
+             Accordion Drop Down
+          ------------------------>
+
+
+
+
+
+
+
+
 
         </section>
 
@@ -964,7 +976,7 @@
 
               <p> I was born on the beautiful island of Jamaica , where I resided for 19 years of my life and was
                 fortunate enough to
-                receive a scholarship to study at Kalamazoo College in the united states. I'm currently a senior
+                receive a scholarship to study at Kalamazoo College in the United States. I'm currently a senior
                 studying mathematics and economics.
                 Outside of my studies, I really enjoy expressing my creativity through graphic design and music.
                 In my free time, you can often find me watching or playing soccer. As for my career aspirations, I would
@@ -1049,7 +1061,7 @@
                 any relocation assistance that may be offered. I am highly motivated to grow in my career, and if the
                 opportunity aligns with my long-term goals ,
                 I would be comfortable relocating to anywhere , even if it means moving to a remote location such as
-                Antarctica.
+                the north pole.
 
 
               </p>
@@ -1057,32 +1069,6 @@
             </div>
 
           </details>
-
-
-
-          <details>
-
-            <summary> What are your career goals? </summary>
-
-            <div class="faq-content">
-
-              <p>
-
-                My current goal is to secure a position at a reputable company that encourages professional development
-                and offers a steady stream of new challenges.
-                As I progress in my role, my ultimate ambition is to assume more management responsibilities and play an
-                active role in the direction of the company.
-                Above all, I am seeking an organization that values its employees and fosters a supportive environment
-                for long-term career growth.
-
-              </p>
-
-            </div>
-
-          </details>
-
-
-
 
 
           <details>
@@ -1111,6 +1097,26 @@
 
 
 
+          <details>
+
+            <summary> What are your career goals? </summary>
+
+            <div class="faq-content">
+
+              <p>
+
+                My current goal is to secure a position at a reputable company that encourages professional development
+                and offers a steady stream of new challenges.
+                As I progress in my role, my ultimate ambition is to assume more management responsibilities and play an
+                active role in the direction of the company.
+                Above all, I am seeking an organization that values its employees and fosters a supportive environment
+                for long-term career growth.
+
+              </p>
+
+            </div>
+
+          </details>
 
 
 
@@ -1483,11 +1489,11 @@
             </li>
 
 
-            <!-- <li class="blog-post-item">
-              <a href="#">
+            <li class="blog-post-item">
+              <a href="https://forage-uploads-prod.s3.amazonaws.com/completion-certificates/KPMG%20AU/m7W4GMqeT3bh9Nb2c_KPMG%20AU_7F8yknie2HTr3KTH5_1676892117977_completion_certificate.pdf">
 
                 <figure class="blog-banner-box">
-                  <img src="./assets/images/Rachel Forage.png" alt="" loading="lazy">
+                  <img src="./assets/images/KPMG-Certificate.PNG" alt="" loading="lazy">
                 </figure>
 
                 <div class="blog-content">
@@ -1509,7 +1515,7 @@
                 </div>
 
               </a>
-            </li> -->
+            </li>
 
 
 
