Edited About Section

--- a/index.html
+++ b/index.html
@@ -1105,11 +1105,7 @@
                 receive a scholarship to study at Kalamazoo College in the United States. I'm currently a senior
                 studying mathematics and economics.
                 Outside of my studies, I really enjoy expressing my creativity through graphic design and music.
-                In my free time, you can often find me watching or playing soccer. As for my career aspirations, I would
-                love to work in the finance industry,
-                particularly in investment banking, financial analytics, or quantitative analytics. Despite my love for
-                finance , I am open to exploring
-                other opportunities in the field of mathematics and economics.
+                In my free time, you can often find me watching or playing soccer. 
 
               </p>
 
@@ -1151,7 +1147,7 @@
 
             <div class="faq-content">
 
-              <p> As a new graduate, while I don't have extensive experience working in finance, I'm confident in my
+              <p> As a new graduate, while I don't have extensive experience working , I'm confident in my
                 ability to learn quickly
                 and work hard to supplement any gaps in my knowledge. I understand the importance of practical
                 experience, and I'm excited
