--- a/index.html
+++ b/index.html
@@ -1156,9 +1156,9 @@
 
 
               <p> I was fortunate to be born on the beautiful island of Jamaica , where I resided for 18 years of my life.
-                receive a scholarship to study at Kalamazoo College in the United States. Having received a prestigious scholarship, my journey took an exciting turn when I 
-                embarked on an educational adventure at Kalamazoo College in the United States. Now  a graduate with a degree in Mathematics and Economics with a coomputer science minor ,
-                I now looking to make the next step in my professional journey.
+                Having received a prestigious scholarship, my journey took an exciting turn when I 
+                embarked on an educational adventure at Kalamazoo College in the United States. Now  a graduate with a degree in Mathematics and Economics with a computer science minor ,
+                I am now looking to make the next step in my professional journey.
 
 
                 
