Added Saka Wall Art Design ++

--- a/index.html
+++ b/index.html
@@ -1577,11 +1577,8 @@
             </li>
 
 
-
-
-
             <li class="project-item  active" data-filter-item data-category="graphic design">
-              <a href="https://www.canva.com/design/DAFBsG0PTfs/5sDU-JA229NnK8d2c-wqwg/view?utm_content=DAFBsG0PTfs&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu"
+              <a href="https://www.canva.com/design/DAFpGIFIp3Q/h0jTLKZTbB8pMCvLyPzuYw/view?utm_content=DAFpGIFIp3Q&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"
                 target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
@@ -1589,19 +1586,18 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/LOC'D.png" alt="LOC'D By Lois" loading="lazy">
+                  <img src="./assets/images/Saka Poster.png" alt="Saka Wall Art" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">LOC'D Logo</h3>
+                <h3 class="project-title"> Bukayo Saka Wall Art</h3>
 
                 <p class="project-category">Graphic Design</p>
 
               </a>
             </li>
 
-
             <li class="project-item  active" data-filter-item data-category="graphic design">
-              <a href="https://www.canva.com/design/DAFMjAbIDOk/cn-iTC9EJu7voAmbzeKmdw/view?utm_content=DAFMjAbIDOk&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu "
+              <a href="https://www.canva.com/design/DAFn92e8i8A/K4pv40dXm_GAZHEPvoyIxw/view?utm_content=DAFn92e8i8A&utm_campaign=designshare&utm_medium=link&utm_source=publishsharelink"
                 target="_blank" rel="noopener noreferrer">
 
                 <figure class="project-img">
@@ -1609,15 +1605,21 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/Welcome Back Wellness.png" alt="Poster" loading="lazy">
+                  <img src="./assets/images/Iphone_Wall_Art.png" alt="Saka Wall Art" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Welcome back Welness Poster </h3>
+                <h3 class="project-title"> Iphone 6+ Wall Art</h3>
 
                 <p class="project-category">Graphic Design</p>
 
               </a>
             </li>
+
+
+
+
+
+
 
             <li class="project-item  active" data-filter-item data-category="research papers">
               <a href="https://docs.google.com/document/d/1SLtyemHjBCRqvyH8uQpPAc-aWXNgBApf/edit?usp=sharing&ouid=110867662222495258528&rtpof=true&sd=true"
@@ -1672,6 +1674,49 @@
                 </figure>
 
                 <h3 class="project-title">Lebensmittelallergie Projekt </h3>
+
+                <p class="project-category">Graphic Design</p>
+
+              </a>
+            </li>
+
+
+            <li class="project-item  active" data-filter-item data-category="graphic design">
+              <a href="https://www.canva.com/design/DAFBsG0PTfs/5sDU-JA229NnK8d2c-wqwg/view?utm_content=DAFBsG0PTfs&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu"
+                target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/LOC'D.png" alt="LOC'D By Lois" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">LOC'D Logo</h3>
+
+                <p class="project-category">Graphic Design</p>
+
+              </a>
+            </li>
+
+
+
+
+
+            <li class="project-item  active" data-filter-item data-category="graphic design">
+              <a href="https://www.canva.com/design/DAFMjAbIDOk/cn-iTC9EJu7voAmbzeKmdw/view?utm_content=DAFMjAbIDOk&utm_campaign=designshare&utm_medium=link&utm_source=homepage_design_menu "
+                target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Welcome Back Wellness.png" alt="Poster" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Welcome back Welness Poster </h3>
 
                 <p class="project-category">Graphic Design</p>
 
@@ -1913,6 +1958,25 @@
 
               </a>
             </li>
+            
+
+            <li class="project-item  active" data-filter-item data-category="software development">
+              <a href="https://github.com/Tarblux/Audio-BPM-Tagger" target="_blank" rel="noopener noreferrer">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/Audio BPM Tagger.png" alt="orizon" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Audio BPM Tagger</h3>
+
+                <p class="project-category">Software Development</p>
+
+              </a>
+            </li>
 
 
             <li class="project-item  active" data-filter-item data-category="music">
@@ -1935,23 +1999,7 @@
 
 
             
-            <li class="project-item  active" data-filter-item data-category="software development">
-              <a href="https://github.com/Tarblux/Audio-BPM-Tagger" target="_blank" rel="noopener noreferrer">
 
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/Audio BPM Tagger.png" alt="orizon" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Audio BPM Tagger</h3>
-
-                <p class="project-category">Software Development</p>
-
-              </a>
-            </li>
 
 
             <li class="project-item  active" data-filter-item data-category="graphic design">
